Source/WTF/wtf/Atomics.h:300: Error: bad register name `%bpl' https://bugs.webkit.org/show_bug.cgi?id=126985

Reviewed by Csaba Osztrogonác.

Use the 'q' constraint to force using a register that allows
access to its lower byte.

* wtf/Atomics.h:
(WTF::weakCompareAndSwap):

Canonical link: https://commits.webkit.org/145110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162137 268f45cc-cd09-0410-ab3c-d52691b4dbfc